<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88EDA1CC"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Signup_btn"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/aldrich"
        android:onClick="SignUP"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_Btn"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/aldrich"
        android:onClick="LogIN"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="291dp"
        android:layout_height="98dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/welcome_to_book_review_1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/username_txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/username_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/enter_username_2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toTopOf="@+id/password_txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/enter_password_1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toTopOf="@+id/login_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="354dp"
        android:layout_height="34dp"
        android:layout_marginBottom="96dp"
        android:text="@string/if_you_are_not_registered_already_kindly_signup"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>